<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="16dp"
    tools:context=".RomanaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationY="50dp"
        android:text="@string/titlu_mate"
        android:fontFamily="@font/bungee"
        android:textSize="26sp"
        android:textColor="#6AC19B"
        android:gravity="center"
        android:lineSpacingExtra="10dp"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/gasesteIntrusBtn"
            android:layout_width="270dp"
            android:layout_height="80dp"
            android:padding="8dp"
            android:text="@string/gaseste_intrusul"
            android:backgroundTint="#47BAE4"
            android:fontFamily="@font/bungee"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/ghicesteContextBtn"
            android:layout_width="290dp"
            android:layout_height="80dp"
            android:padding="8dp"
            android:text="@string/ghiceste_contextul"
            android:backgroundTint="#47BAE4"
            android:fontFamily="@font/bungee"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/formeazaCuvantBtn"
            android:layout_width="290dp"
            android:layout_height="80dp"
            android:padding="8dp"
            android:text="@string/formeaza_cuvantul"
            android:backgroundTint="#47BAE4"
            android:fontFamily="@font/bungee"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/grupLitereBtn"
            android:layout_width="290dp"
            android:layout_height="100dp"
            android:paddingStart="21dp"
            android:paddingEnd="21dp"
            android:text="@string/grup_litere"
            android:backgroundTint="#47BAE4"
            android:fontFamily="@font/bungee"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:lineSpacingExtra="7dp"
            android:layout_marginBottom="8dp" />

    </LinearLayout>
</RelativeLayout>