<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/k_app_design_v4"
        android:contentDescription="@string/background"
        android:alpha="0.9"/>

    <TextView
        android:id="@+id/centerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:translationY="35dp"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/start_text"
        android:textColor="#93a998"
        android:textSize="36sp"
        android:fontFamily="@font/bungee"
        android:lineSpacingExtra="25dp"/>

    <Button
        android:id="@+id/navigateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/centerText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/start_button_text"
        android:backgroundTint="#93a998"
        android:textColor="#FFFFFF"/>


</RelativeLayout>