<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="16dp"
    tools:context=".MateActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:translationY="35dp"
        android:text="@string/titlu_mate"
        android:fontFamily="@font/bungee"
        android:textColor="#93a998"
        android:textSize="26sp"
        android:lineSpacingExtra="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationY="230dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/adunari_btn"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="10dp"
            android:text="@string/adunari_text"
            android:fontFamily="@font/bungee"
            android:textColor="#99BAA2"
            android:textSize="28sp" />

        <Button
            android:id="@+id/scaderi_btn"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/bungee"
            android:padding="10dp"
            android:text="@string/scaderi_text"
            android:textColor="#99BAA2"
            android:textSize="28sp" />

        <Button
            android:id="@+id/inmultiri_btn"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/bungee"
            android:padding="10dp"
            android:text="@string/inmultiri_text"
            android:textColor="#99BAA2"
            android:textSize="28sp" />

    </LinearLayout>

</RelativeLayout>