<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="16dp"
    tools:context=".InmultiriActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:translationY="35dp"
        android:text="@string/titlu_inmultiri"
        android:fontFamily="@font/bungee"
        android:textColor="#93a998"
        android:textSize="26sp"
        android:padding="13dp"
        android:lineSpacingExtra="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:translationY="240dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/inmEasy_btn"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:padding="8dp"
            android:text="@string/inm_usor"
            android:fontFamily="@font/bungee"
            android:textColor="#99BAA2"
            android:textSize="22sp" />

        <Button
            android:id="@+id/inmMedium_btn"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:padding="8dp"
            android:text="@string/inm_mediu"
            android:fontFamily="@font/bungee"
            android:textColor="#99BAA2"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/inmHard_btn"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:padding="8dp"
            android:text="@string/inm_greu"
            android:fontFamily="@font/bungee"
            android:textColor="#99BAA2"
            android:textSize="22sp"/>

    </LinearLayout>

</RelativeLayout>